# 5Data-HRMS

./: .dockerignore  .env.example  .gitignore  ADMIN_FIX_SUMMARY.md  AUTHENTICATION_FIX_SUMMARY.md  AUTH_FIX_VISUAL_GUIDE.md  CHECKLIST.md  EMPLOYEE_ROLE_MANAGEMENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_ASSIGNMENT_DEBUGGING.md  PROJECT_ASSIGNMENT_FILTERING_FIX.md  PROJECT_ASSIGNMENT_FINAL_STATUS.md  PROJECT_ASSIGNMENT_FIX.md  PROJECT_ASSIGNMENT_IMPLEMENTATION.md  PROJECT_ASSIGNMENT_QUICK_FIX.md  PROJECT_ASSIGNMENT_SETUP_CHECKLIST.md  PROJECT_DROPDOWN_DEBUG.md  PROJECT_STATUS.md  QUICK_START.md  RBAC_DEPLOYMENT_CHECKLIST.md  RBAC_FILES_MODIFIED.md  RBAC_IMPLEMENTATION_SUMMARY.md  RBAC_INDEX.md  RBAC_OVERVIEW.md  RBAC_QUICK_REFERENCE.md  README.md  ROLE_ASSIGNMENT_GUIDE.md  SESSION_PERSISTENCE_FIX_COMPLETE.md  SETUP.md  STRUCTURE.md  TESTING_AUTH_FIX.md  TIMESHEET_IMPLEMENTATION.md  TIMESHEET_QUICK_START.md  package.json
apps/backend/: grant_db_permissions.sh  pyproject.toml  requirements.txt
apps/backend/accounts/: __init__.py  admin.py  models.py  serializers.py  test_rbac.py  urls.py  views.py
apps/backend/audit/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/backend/common/: __init__.py  admin.py  exceptions.py  models.py  permissions.py  serializers.py  tests.py  utils.py
apps/backend/core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
apps/backend/documents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/backend/employees/: __init__.py  admin.py  apps.py  models.py  serializers.py  (+2 more)
(+150 files in other folders)
